--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
   <meta name="robots" content="noindex" />
 
   <!-- Favicon -->
-  <link rel="icon" href="Miig.png" sizes="any"/>
+  <link rel="icon" href="Miig_2.png" sizes="any"/>
   
 
   <!-- Open Graph & SEO tags -->
